examples/modules/valid/app/import_alias.axom
import math.utils as u

print u.add(2, 3)
