examples/modules/invalid/wildcard_import.axom
from math.utils import *

print add(1, 2)
